added top and bottom navbars

--- a/index.html
+++ b/index.html
@@ -4,23 +4,51 @@
 <title>
     Google
 </title>
+    <div class="top-nav-bar">
+        <ul>
+                <div class="top-left-links">
+                    <li><a href="about">About</a></li>
+                    <li><a href="store">Store</a></li>
+                </div>
+                <div class="top-right-links">
+                    <li><a href="gmail">Gmail</a></li>
+                    <li><a href="images">Images</a></li>    
+                </div>            
+        </ul> 
 
-<div class="search-element">
-
-<div class="logo">
-<img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo">
-    
-
-    <div class="search-bar">
-    <input type="text" size="40"><br>
     </div>
 
-    <div class="submit-buttons">
-    <input type="submit" value="Google Search">
-    <input type="submit" value="I'm Feeling Lucky"><br>
+    <div class="search-element">
+
+    <div class="logo">
+    <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo">
+        
+
+        <div class="search-bar">
+        <input type="text" size="40"><br>
+        </div>
+
+        <div class="submit-buttons">
+        <input type="submit" value="Google Search">
+        <input type="submit" value="I'm Feeling Lucky"><br>
+        </div>
     </div>
-</div>
-</div>
+    </div>
+
+    <div class="bottom-nav-bar">
+            <ul>
+                    <div class="bottom-left-links">
+                        <li><a href="advertising">Advertising</a></li>
+                        <li><a href="business">Business</a></li>
+                        <li><a href="how-search-works">How Search Works</a></li>
+                    </div>
+                    <div class="bottom-right-links">
+                        <li><a href="privacy">Privacy</a></li>
+                        <li><a href="terms">Terms</a></li>    
+                        <li><a href="settings">Settings</a></li>
+                    </div>            
+            </ul>     
+        </div>
 
 <link rel="stylesheet" href="style.css">
 
