Changed font and size of navbar links. Changed styling to look closer to google homepage

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <title>
     Google
 </title>
+
+<body>
     <div class="top-nav-bar">
         <ul>
                 <div class="top-left-links">
@@ -49,7 +51,7 @@
                     </div>            
             </ul>     
         </div>
-
+</body>
 <link rel="stylesheet" href="style.css">
 
 </html>
